--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Landing Page</title>
+  <title>LogicMuffin's Portfolio</title>
   <style>
-    body{
+    body {
       margin: 0; /* Remove default margin */
     }
-    iframe{
+    iframe {
       display: block;  /* iframes are inline by default */
       height: 100vh;  /* Set height to 100% of the viewport height */
       width: 100vw;  /* Set width to 100% of the viewport width */
