Add styling back in for iframe.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <title>LogicMuffin's Portfolio</title>
+
+  <style>
+    iframe {
+      display: block;  /* iframes are inline by default */
+      height: 100vh;  /* Set height to 100% of the viewport height */
+      width: 100vw;  /* Set width to 100% of the viewport width */
+      border: none; /* Remove default border */
+      background: lightyellow;
+    }
+  </style>
 </head>
 <body>
   <iframe src="dist/landing-page/browser/index.html"></iframe>
