You're going to make me host this on s3, aren't you?

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       width: 100vw;  /* Set width to 100% of the viewport width */
       border: none; /* Remove default border */
     }
+    body {
+      overflow: hidden; /* Hide scrollbars */
+    }
   </style>
 </head>
 <body>
