Definitely would prefer s3 right now.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>LogicMuffin's Portfolio</title>
+  <link rel="icon" type="image/x-icon" href="dist/landing-page/browser/assets/favicon.ico">
 
   <style>
     iframe {
