--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       border: none; /* Remove default border */
     }
     body {
+      margin: 0;
       overflow: hidden; /* Hide scrollbars */
     }
   </style>
